# WIZ016-GA01_Righello

./: .gitignore  LICENSE  README.md  Righello_0_colab.ipynb  TODO.txt  get_avatars_test.py  main.ipynb  pyproject.toml  ruler.py  tkinter_test0.py  tkinter_test1.py  utils.py  utils_old.py
Data/Constraints/: avatars.csv
