[project]
name = "Righello"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Wizren", email = "crippadan@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "pyinstaller>=6.11.0",
    "ipykernel>=6.29.5",
    "tk>=0.1.0",
    "Pillow>=11.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
